@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -bug#0000615: Minor host.php tweak
 -bug#0000619: Host Templates not alphabetized on device creation form
 -bug#0000625: Cannot modify/create a user with a period in the username
+-bug#0000582: Ampersand present in graph template graph name causes xml import to fail
 -bug: Stop MySQL connect messages from appearing in user interface
 -bug: Allow primary keys other than "ID" from saving properly in function sql_save
 -bug: Allow primary keys other than "ID" to be handled properly using the html code
